fix: space header visibility

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -11,7 +11,7 @@ body {
 /* 导航栏 */
 #biliMainHeader {
   height: auto !important;
-  min-height: auto !important;
+  min-height: var(--navbar-height) !important;
   margin-bottom: 0;
   position: initial;
   visibility: initial !important;
@@ -26,11 +26,6 @@ body {
       height: var(--navbar-height);
       max-width: none !important;
     }
-  }
-
-  /* BiliBili Evolved自定义顶栏加载前，强制显示原生顶栏 */
-  &:not(:has(>.custom-navbar)) .bili-header__bar {
-    display: flex !important;
   }
 
   /* 自定义顶栏加载后 */
