--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -10,6 +10,11 @@
 
 #biliMainHeader {
   margin-top: var(--player-height-record);
+
+  /* BiliBili Evolved自定义顶栏加载前，强制显示原生顶栏 */
+  &:not(:has(>.custom-navbar)) .bili-header__bar {
+    display: flex !important;
+  }
 }
 
 /* 播放器定位 */
